src/objects/UPT_Budget_Resource__c.object
<CustomObject>
    <description>Stores the available resources for UPT based billing rates. Allows attributes of each resource to be stored centrally and updated as needed.</description>
    <fields>
        <fullName>Bid_Grid_Titles__c</fullName>
        <description>Title for Bid Grid.</description>
        <label>Bid Grid Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Friendly_Titles__c</fullName>
        <description>Customer friendly title.</description>
        <label>Customer Friendly Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Grade__c</fullName>
        <description>Job grade for resource.</description>
        <label>Job Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource_Name__c</fullName>
        <description>Name of the resource.</description>
        <label>Resource Name</label>
        <type>TextArea</type>
    </fields>
    <label>UPT Budget Resource</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>UPT Budget Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPT Budget Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>